Fix spacing on info section between pics and text

--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ img{
 .one img, .two img, .three img, .four img{
     border: 5px solid #3882F6;
     border-radius: 16px;
-    
+    margin-bottom: -10px;
 }
 
 .one, .two, .three, .four{
